theatre-downtown/css/style.css
/* ... */
	h1,h2 {
  font-family: "ltc-broadway-engraved",serif;
  color:#CF0;
  font-size:1.5em;
  text-align:center;
}


h2 {
  font-family: "lobster",serif;
  color:#000;
  font-size:1.313em;
  
}

	
#container {
	max-width: 95.833333%; /*920px/960px*/
	margin: auto;
	background: #26315A;
}

nav {  
    height: 30px;  
    width: 100%;  
    background: #B9CF6A;  
    font-size: 0.688em;  
    font-family: 'PT Sans', Arial, sans-serif;  
    font-weight: bold;  
    position: relative;  
    border-bottom: 2px solid #B9CF6AA;  
}  
nav ul {  
    padding: 0;  
    margin: 0 auto;  
    width: 600px;  
    height: 30px;  
}  

nav li {  
    display: inline;  
    float: left;  
}  

.clearfix:before,  
.clearfix:after {  
    content: " ";  
    display: table;  
}  
.clearfix:after {  
    clear: both;  
}  
.clearfix {  
    *zoom: 1;  
}  

nav a {  
    color: #fff;  
    display: inline-block;  
    width: 100px;  
    text-align: center;  
    text-decoration: none;  
    line-height: 30px;  
    text-shadow: 1px 1px 0px #283744;  
}  

nav li a {  
    border-right: 1px solid #fff;  
    box-sizing:border-box;  
    -moz-box-sizing:border-box;  
    -webkit-box-sizing:border-box;  
}  
nav li:last-child a {  
    border-right: 0;  
}  

nav a:hover, nav a:active {  
    background-color: #32546B;  
}  

nav a#pull {  
    display: none;  
}         


#cta{
	width: 100%;  /* 920px*/
	height: 100px;
	background-color:#000;
	color:#fff;
	margin-top:15px;
	
}



#main{
	width: 100%
	padding:20px
	margin: 20px;
	margin: 20px;
}

table{
	width: 56.413043%; /*519px/920*/
	height: 276px;
	font-family: "Trebuchet MS", sans-serif;
	font-size: 1em;
	font-weight: bold;
	line-height: 1.4em;
	font-style: normal;
	border-collapse: collapse;
	float: left;
	margin: 0 auto;
	background-color: #32546B;
}


 th{
	padding-top:20px;
	padding-left:20px;
	font-size: 1.5em;
    color:#fff;
    text-shadow:1px 1px 1px #568F23;
    border-collapse: collapse;
    border-bottom:3px solid #9ED929;
    background-color:#9DD929;
    background:-webkit-gradient(
        linear,
        left bottom,
        left top,
        color-stop(0.02, rgb(123,192,67)),
        color-stop(0.51, rgb(139,198,66)),
        color-stop(0.87, rgb(158,217,41))
        );
    background: -moz-linear-gradient(
        center bottom,
        rgb(123,192,67) 2%,
        rgb(139,198,66) 51%,
        rgb(158,217,41) 87%
        );
    /*-webkit-border-top-left-radius:1px;
  -webkit-border-top-right-radius:5px;
    -moz-border-radius:5px 5px 0px 0px;*/
    /*border-top-left-radius: 
    border-top-right-radius:5px;*/
}


	
tr{ 
	padding:20px;
    text-align:center;
    background-color:#DEF3CA;
    border: 2px solid #81C242;
    -moz-border-radius:2px;
    -webkit-border-radius:2px;
    border-radius:2px;
    color:#666;
    text-shadow:1px 1px 1px #fff;
}

#poster{
	float: left;
	margin-bottom: 20px;
	margin-left: 50px;
}
aside{
	height: 8.695652%;
	width: 15.000em;
	background-color: #B9CF6A;
	color: #000;
	font-family: "myriad-pro",sans-serif;
	font-style: italic;
	font-weight: 400;
	line-height: 1.5;
	font-size: 0.813em;
	float: right;
	border: 3px #fff;
	border-radius:5px;
	margin: 1.041667%;
	padding: 1.086957%; /*10px/920px*/
}

#gallery{
	width: 100%;
	clear: both;
	background-color: #fff;
	border: solid #fff 5px;
	border-radius: 5px;
	margin-bottom: 20px;
	padding: 5px;
}

#gallery ul{
	list-style-type:none;
	margin:0, auto;
	padding:0;
	overflow:hidden;
	
}

#gallery li{
	margin-top: 5px;
	margin-bottom: 5px;
	padding-top: 20px
	padding-bottom:20px;
	padding-left: 5px;
	padding-right: 30px;
	float: left;
	overflow: hidden;
	margin-right: 50px;
	width: 7.608696% /*70px/920px*/	/*height:70px;*/
	
}


footer{
	max-width:100%;
	background-color:#000;
	color:#fff;
	clear:both;
	margin-top: 50px;
	
}

footer ul{
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	margin-top: 20px;
}

footer li{
	margin-left: 5.434783%; /*50px/920px*/
	margin-right: 5.434783%; /*50px/920px*/
	margin-top: 5px;
	margin-bottom: 5px;
	font-size: 0.813em;
	padding: 5px;
	float:left;	
	
}

#box_office, {
	widows:100%; /*920px*/
	height:26.688em; /*427px*/
	margin-top: 20px;
	margin-bottom:20px;
	background-color:#fff;
}
.why_join, #board{
	background-color:#fff;
	width: 29.891304%; /*275px;*/
	float:left;
	color:#384313;
	box-shadow: 2px 2px 2px #888888;
	padding-top:20px;
	padding-bottom:50px;
	padding-left:15px;
	padding-right:15px;
	font-size:18px;
	line-height:2.5;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	
}

form#sign_up {
background: #9cbc2c;
-moz-border-radius: 5px;
-webkit-border-radius: 5px;
border-radius: 5px;
padding: 20px;
width: 460px;
float:left;
}

form#sign_up fieldset {
border: none;
margin-bottom: 10px;
}
form#sign_up fieldset:last-of-type {
margin-bottom: 0;
}

form#sign_up legend {
color: #384313;
font-size: 16px;
font-weight: bold;
padding-bottom: 10px;
text-shadow: 0 1px 1px #c0d576;
}



form#sign_up fieldset fieldset legend {
color: #111111;
font-size: 13px;
font-weight: normal;
padding-bottom: 0;
}

form#sign_up ol li {
background: #b9cf6a;
background: rgba(255,255,255,.3);
border-color: #e3ebc3;
border-color: rgba(255,255,255,.6);
border-style: solid;
border-width: 2px;
-moz-border-radius: 5px;
-webkit-border-radius: 5px;
border-radius: 5px;
line-height: 30px;
list-style: none;
padding: 5px 10px;
margin-bottom: 2px;
}
form#sign_up ol ol li {
background: none;
border: none;
float: left;
}

form#sign_up label {
float: left;
font-size: 13px;
width: 110px;
}
form#sign_up fieldset fieldset label {
background:none no-repeat left 50%;
line-height: 20px;
padding: 0 0 0 30px;
width: auto;
}

form#sign_up input:not([type=checkbox]),
form#sign_up textarea {
background: #ffffff;
border: none;
-moz-border-radius: 3px;
-webkit-border-radius: 3px;
-khtml-border-radius: 3px;
border-radius: 3px;
font: italic 13px Georgia, "Times New Roman", Times, serif;
outline: none;
padding: 5px;
width: 200px;
}
/* ... */

